--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 </div>
                 <div class="modarcl-body">
                     <a href="https://www.facebook.com"> <img src="images/facebook.png"> </a>
-                    <a href="https://www.instagram.com"> <img src="images/instagram.png"> </a>
-                    <a href = "https://www.spotify.com"><img src="images/spotify.png"> </a>
-                    <a href = "https://www.twitter.com"><img src="images/twitter.png"> </a>
+                    <a href="https://www.instagram.com"> <img src="images/instagram.png" style="margin:10px;"> </a>
+                    <a href = "https://www.spotify.com"><img src="images/spotify.png" style="width:80px;height:80px;margin:20px;"> </a>
+                    <a href = "https://www.twitter.com"><img src="images/twitter.png" style="margin:10px;"> </a>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
